[fix]answer style [modify]train loss stepRL

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "framed-neighbor",
+   "id": "primary-triangle",
    "metadata": {},
    "source": [
     "# evaluation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-discipline",
+   "id": "trying-wesley",
    "metadata": {},
    "source": [
     "### import package"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "portable-photograph",
+   "execution_count": 1,
+   "id": "assured-arbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,13 @@
     "\n",
     "import PIL.Image as Image\n",
     "from matplotlib import pyplot as plt\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import torchvision.models as models"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "through-factory",
+   "id": "dying-opposition",
    "metadata": {},
    "source": [
     "### check gpu"
@@ -54,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "reasonable-earth",
+   "execution_count": 2,
+   "id": "chinese-research",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-jones",
+   "id": "level-constraint",
    "metadata": {},
    "source": [
     "## read classes, labels txt"
@@ -97,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "bridal-parent",
+   "execution_count": 3,
+   "id": "descending-brake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proprietary-vertical",
+   "id": "suspected-section",
    "metadata": {},
    "source": [
     "### Data augmentation"
@@ -139,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "political-leeds",
+   "execution_count": 4,
+   "id": "surgical-bankruptcy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-clarity",
+   "id": "aggregate-madrid",
    "metadata": {},
    "source": [
     "### Dataset\n",
@@ -167,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "confidential-inventory",
+   "execution_count": 5,
+   "id": "integral-humidity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,17 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "independent-robinson",
+   "execution_count": 6,
+   "id": "unexpected-nicholas",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/torch/utils/data/dataloader.py:477: UserWarning: This DataLoader will create 32 worker processes in total. Our suggested max number of worker in current system is 20, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "  cpuset_checked))\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "300"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beginning-confidence",
+   "id": "hollow-motivation",
    "metadata": {},
    "source": [
     "### test model"
@@ -249,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "monetary-thomson",
+   "execution_count": 7,
+   "id": "ceramic-constitutional",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,8 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "sexual-commodity",
+   "execution_count": 8,
+   "id": "elect-craft",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,100 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "excellent-shelf",
+   "execution_count": 12,
+   "id": "interim-croatia",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10it [00:01,  7.68it/s]"
+      "10it [00:01,  7.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.8450) tensor([46.5625], device='cuda:0') tensor([78.0208], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torchvision.models as models\n",
-    "\n",
-    "output_foloder = 'model/model_bird_res50_LR5'\n",
-    "with torch.no_grad():\n",
-    "    #model = torch.load('{}/checkpoint.pth.tar'.format(output_foloder))\n",
-    "    model = models.resnet50(pretrained=True).to(device)\n",
-    "    model.load_state_dict(torch.load('{}/checkpoint_0015.pth.tar'.format(output_foloder))['state_dict'])\n",
-    "    val_loss, val_acc_top1, val_acc_top5 = pass_epoch(test_loader, 'Eval') \n",
-    "print(val_loss, val_acc_top1, val_acc_top5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "coupled-collaboration",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10it [00:01,  7.09it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(3.4081) tensor([44.5833], device='cuda:0') tensor([69.0625], device='cuda:0')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "output_foloder = 'model/model_bird_resnet50'\n",
-    "with torch.no_grad():\n",
-    "    #model = torch.load('{}/checkpoint.pth.tar'.format(output_foloder))\n",
-    "    model = models.resnet50(pretrained=True).to(device)\n",
-    "    model.load_state_dict(torch.load('{}/checkpoint_0020.pth.tar'.format(output_foloder))['state_dict'])\n",
-    "    val_loss, val_acc_top1, val_acc_top5 = pass_epoch(test_loader, 'Eval') \n",
-    "print(val_loss, val_acc_top1, val_acc_top5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "original-tuition",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10it [00:01,  6.71it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(2.8448) tensor([46.8750], device='cuda:0') tensor([78.0208], device='cuda:0')\n"
+      "tensor(2.8443) tensor([46.8750], device='cuda:0') tensor([78.0208], device='cuda:0')\n"
      ]
     },
     {
@@ -433,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "structural-champion",
+   "id": "going-howard",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "serial-jacksonville",
+   "id": "hidden-youth",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "authorized-consistency",
+   "id": "bacterial-portland",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "comfortable-mouse",
+   "id": "subjective-teaching",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "marked-bathroom",
+   "id": "indie-switzerland",
    "metadata": {},
    "outputs": [
     {
@@ -592,8 +523,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "cathedral-controversy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:00, 10.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.8569) tensor([55.6250], device='cuda:0') tensor([74.7917], device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_resnet50_all_aug', '0095')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "greenhouse-influence",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  8.89it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.7659) tensor([55.9375], device='cuda:0') tensor([83.8542], device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_resnet50_all_aug_RL', '0022')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "strong-teacher",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  6.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.7799) tensor([55.9375], device='cuda:0') tensor([82.7083], device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_resnet50_all_aug_RL', '0027')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "local-title",
+   "id": "steady-sydney",
    "metadata": {},
    "outputs": [],
    "source": []
