[add]swin [add]3 loss function [add]test all data trainngin

--- a/answer.ipynb
+++ b/answer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "opening-praise",
+   "id": "reasonable-grace",
    "metadata": {},
    "source": [
     "# answer"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-intro",
+   "id": "documentary-hamburg",
    "metadata": {},
    "source": [
     "### import package"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "intensive-means",
+   "execution_count": 12,
+   "id": "generic-reputation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-black",
+   "id": "dental-bangladesh",
    "metadata": {},
    "source": [
     "### check gpu"
@@ -55,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "infrared-console",
+   "execution_count": 13,
+   "id": "coordinate-belfast",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch version:1.8.0\n",
+      "torch version:1.9.0+cu102\n",
       "Available GPUs: GeForce RTX 2080 Ti GeForce GTX 1080 Ti "
      ]
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detected-uniform",
+   "id": "higher-calibration",
    "metadata": {},
    "source": [
     "## read classes txt"
@@ -95,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "surrounded-blair",
+   "execution_count": 14,
+   "id": "straight-laundry",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-female",
+   "id": "critical-romantic",
    "metadata": {},
    "source": [
     "### Data augmentation"
@@ -127,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "polish-bones",
+   "execution_count": 15,
+   "id": "suited-raleigh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "\n",
     "def get_trnsform():\n",
     "    transform = transforms.Compose([\n",
-    "        transforms.Resize((300, 300)),\n",
+    "        transforms.Resize((224, 224)),\n",
     "        transforms.ToTensor(),\n",
     "        normalize\n",
     "    ])\n",
@@ -146,23 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "russian-referral",
+   "execution_count": 16,
+   "id": "english-indicator",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_foloder = 'model/model_bird_resnet50_all_aug_RL'\n",
-    "model_idx = '0027'\n",
+    "model_foloder = 'model/model_bird_vit_AllData'\n",
+    "model_idx = '0045'\n",
     "with torch.no_grad():\n",
-    "    model = models.resnet50(pretrained=True)\n",
+    "    model = torch.load('{}/checkpoint.pth.tar'.format(model_foloder))\n",
     "    model.load_state_dict(torch.load('{}/checkpoint_{}.pth.tar'.format(model_foloder, model_idx))['state_dict'])\n",
     "    model.eval().to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "weighted-plain",
+   "execution_count": 17,
+   "id": "registered-showcase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,15 +179,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "level-smell",
+   "execution_count": 18,
+   "id": "valued-perry",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3033/3033 [01:19<00:00, 38.37it/s]\n"
+      "100%|██████████| 3033/3033 [01:42<00:00, 29.56it/s]\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-memorial",
+   "id": "fantastic-portuguese",
    "metadata": {},
    "outputs": [],
    "source": []
