--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "primary-triangle",
+   "id": "floating-commerce",
    "metadata": {},
    "source": [
     "# evaluation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trying-wesley",
+   "id": "separate-compatibility",
    "metadata": {},
    "source": [
     "### import package"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "assured-arbor",
+   "id": "expanded-syndication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-opposition",
+   "id": "running-addiction",
    "metadata": {},
    "source": [
     "### check gpu"
@@ -56,14 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "chinese-research",
+   "id": "pacific-paragraph",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch version:1.8.0\n",
+      "torch version:1.9.0+cu102\n",
       "Available GPUs: GeForce RTX 2080 Ti GeForce GTX 1080 Ti "
      ]
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "level-constraint",
+   "id": "normal-criterion",
    "metadata": {},
    "source": [
     "## read classes, labels txt"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "descending-brake",
+   "id": "killing-event",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-section",
+   "id": "persistent-prospect",
    "metadata": {},
    "source": [
     "### Data augmentation"
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "surgical-bankruptcy",
+   "id": "annual-prince",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-madrid",
+   "id": "roman-beverage",
    "metadata": {},
    "source": [
     "### Dataset\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "integral-humidity",
+   "id": "sweet-darkness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "unexpected-nicholas",
+   "id": "laden-citizenship",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/torch/utils/data/dataloader.py:477: UserWarning: This DataLoader will create 32 worker processes in total. Our suggested max number of worker in current system is 20, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "/home/me/.local/lib/python3.7/site-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 32 worker processes in total. Our suggested max number of worker in current system is 20, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
       "  cpuset_checked))\n"
      ]
     },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollow-motivation",
+   "id": "vocal-paste",
    "metadata": {},
    "source": [
     "### test model"
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ceramic-constitutional",
+   "id": "sunrise-gamma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,23 +316,24 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "elect-craft",
+   "id": "round-juice",
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_model(path, idx = 99):\n",
     "    with torch.no_grad():\n",
-    "        #model = torch.load('{}/checkpoint.pth.tar'.format(output_foloder))\n",
-    "        model = models.resnet50(pretrained=True).to(device)\n",
+    "        model = torch.load('{}/checkpoint.pth.tar'.format(path))\n",
+    "#         model = models.resnet50(pretrained=True).to(device)\n",
     "        model.load_state_dict(torch.load('{}/checkpoint_{}.pth.tar'.format(path, idx))['state_dict'])\n",
     "        val_loss, val_acc_top1, val_acc_top5 = pass_epoch(model,test_loader, 'Eval') \n",
-    "    print(val_loss, val_acc_top1, val_acc_top5)"
+    "    print(\"val_loss \", val_loss.to('cpu').numpy(), \"val_acc_top1\", val_acc_top1.to('cpu').numpy(), \"val_acc_top5 \", val_acc_top5.to('cpu').numpy())\n",
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "interim-croatia",
+   "id": "polish-profit",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "going-howard",
+   "id": "strong-sculpture",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "hidden-youth",
+   "id": "choice-vancouver",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "bacterial-portland",
+   "id": "aerial-blame",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "subjective-teaching",
+   "id": "ongoing-diana",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "indie-switzerland",
+   "id": "behind-speaking",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cathedral-controversy",
+   "id": "characteristic-democrat",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "greenhouse-influence",
+   "id": "designing-effect",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "strong-teacher",
+   "id": "spoken-tucson",
    "metadata": {},
    "outputs": [
     {
@@ -619,8 +620,360 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "incident-direction",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  5.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.7091) tensor([66.3542], device='cuda:0') tensor([92.2917], device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit', '0028')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "accredited-workplace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:03,  2.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.0902) tensor([76.8750], device='cuda:0') tensor([96.5625], device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_MultiStepLR', '0050')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "blond-marijuana",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:03,  2.88it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.8201518 val_acc_top1 [78.75] val_acc_top5  [96.25]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_ReduceLROnPlateau', '0046')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "sweet-austria",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  5.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.63634455 val_acc_top1 [80.625] val_acc_top5  [96.875]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_SGD', '0047')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "lonely-mercury",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  5.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.7801565 val_acc_top1 [81.875] val_acc_top5  [97.8125]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_CrossEntropyLS', '0047')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "standard-holly",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:02,  3.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.18670908 val_acc_top1 [99.375] val_acc_top5  [100.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_AllData', '0045')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cleared-directive",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:03,  2.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.80037576 val_acc_top1 [81.5625] val_acc_top5  [97.8125]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_CrossEntropyLS', '0074')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "radio-hazard",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:03,  2.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.7540843 val_acc_top1 [82.5] val_acc_top5  [97.5]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_vic', '0031')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "amber-fifty",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:03,  2.83it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.7697259 val_acc_top1 [81.25] val_acc_top5  [97.1875]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_vic', '0035')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "pacific-antarctica",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  5.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.727914 val_acc_top1 [81.5625] val_acc_top5  [97.8125]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_vic', '0047')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "checked-tribute",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10it [00:01,  5.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val_loss  0.7740514 val_acc_top1 [81.875] val_acc_top5  [96.875]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_model('model/model_bird_vit_vic_GradScaler', '0047')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "steady-sydney",
+   "id": "violent-carbon",
    "metadata": {},
    "outputs": [],
    "source": []
